# FhirMapMaster

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  README.md  README_V2.md  app.py  app_test.py  app_v2.py  index.html  packages.txt  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements.txt  test_app.py  test_cpcds_parser.py  test_deployment.py  vercel.json
api/: health.py  index.py  requirements.txt  transform.py  validate.py
cache/cpcds/: parsed_mappings.json
components/: data_profiler.py  enhanced_mapping_interface.py  export_interface.py  file_uploader.py  fml_viewer.py  mapping_interface.py  mapping_interface.py.backup  mapping_interface_new.py  resource_selector.py
memory/: constitution.md
pipelines/configurations/: patient_demographics_pipeline.yaml
pipelines/templates/: patient_template.liquid
sample_data/: sample_claims_data.csv  sample_clinical_data.csv  test_patient_data.csv
scripts/: validate_specs.py
specs/001-llm-mapping-engine/: spec.md
specs/002-pipeline-templates/: spec.md
specs/003-validation-framework/: spec.md
specs/004-database-integration/: spec.md
specs/005-reusable-templates/: spec.md
templates/: spec_template.md
tests/: test_database_adapter.py  test_llm_service.py  test_validation_engine.py
utils/: ccda_mapping.py  claims_mapping_data.py  compliance_metrics.py  cpcds_mapping.py  data_processor.py  enhanced_mapper.py  export_service.py  fhir_datatypes.py  fhir_ig_loader.py  fhir_mapper.py  fhir_mapping_language.py  fhir_validator.py  hl7_v2_mapping.py  llm_service.py
(+5 files in other folders)
